Added employee rating LLD

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,8 +4,8 @@ include 'parking-lot'
 include 'inventory-management'
 include 'elevator'
 include 'chess'
-include 'snakeandladder'
-include 'vendingmachine'
+include 'snake-and-ladder'
+include 'vending-machine'
 include 'atm'
 include 'splitwise'
 include 'airline'
@@ -19,8 +19,8 @@ include 'loggingsystem'
 include 'musicplaylist'
 include 'googlecalender'
 include 'pubsub'
-include 'taskscheduler'
-include 'hitcounter'
+include 'task-scheduler'
+include 'hit-counter'
 include 'cache'
 include 'parking-lot-real'
 include 'cache-multi'
@@ -34,4 +34,5 @@ include 'feature-flag'
 include 'voting-system'
 include 'url-router'
 include 'snake-game'
+include 'employee-rating'
 
